--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
 antlr4-python3-runtime==4.8
+black==21.9b0
+click==8.0.1
+flake8==3.9.2
 hydra-core==1.1.1
 importlib-resources==5.2.2
+isort==5.9.3
+mccabe==0.6.1
+mypy==0.910
+mypy-extensions==0.4.3
 omegaconf==2.1.1
+pathspec==0.9.0
+platformdirs==2.4.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
 PyYAML==5.4.1
+regex==2021.9.24
 selenium==3.141.0
+toml==0.10.2
+tomli==1.2.1
+typing-extensions==3.10.0.2
 urllib3==1.26.7
 zipp==3.5.0
