--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
 antlr4-python3-runtime==4.8
+attrs==21.2.0
 black==21.9b0
 click==8.0.1
 flake8==3.9.2
 hydra-core==1.1.1
 importlib-resources==5.2.2
+iniconfig==1.1.1
 isort==5.9.3
 mccabe==0.6.1
 mypy==0.910
 mypy-extensions==0.4.3
 omegaconf==2.1.1
+packaging==21.0
 pathspec==0.9.0
 platformdirs==2.4.0
+pluggy==1.0.0
+py==1.10.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
+pyparsing==2.4.7
+pytest==6.2.5
 PyYAML==5.4.1
 regex==2021.9.24
 selenium==3.141.0
