--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,13 @@
 defaults:
   - driver: chrome
-  - app_mode: url_parser
   - running_mode: debug
+  - app_mode: MISSING
   - _self_
 
 hydra:
   job_logging:
     root:
       level: ${running_mode.logging_level}
+
+plugins:
+  only_active: True
