--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,9 @@
-default:
-  - app_mode: MISSING
-  - environement: local
+defaults:
+  - environment: local
   - run_mode: debug
+  - _self_
 
+app_mode: MISSING
 hydra:
   job_logging:
     root:
